# netconf

./: CLAUDE.md  README.md  inventory.py  pyproject.toml  requirements.txt  ssh_client.py
collector/: __init__.py  interfaces.py  link_state.py  neighbor.py
engine/: __init__.py  infer.py  validate.py
inventory/: hosts.yaml
output/: __init__.py  formatters.py
scripts/: __init__.py  discover.py
